src/assets/sass/components/home.scss
@import "../variables.scss";

body {
    background-color: $primary-color;


    .homepage-container {
        .MuiBox-root-103 {
            padding: 0;
        }
    }

    .header-img {
        width: 100%;
        position: relative;

        img {
            width: 100%;
            height: 32rem;
            object-fit: cover;
            opacity: 0.3;
        }

        .img-text {
            text-align: center;
            color: $dark;
            position:absolute;
            left:50%;
            top:50%;
            transform: translate(-50%,-50%);

            h1 {
                font-weight: 600;
            }

            p {
                font-weight: 600;
            }

            .read-btn {
                width: 200px;
                padding: 0.8rem;
                border-radius: 5rem;
                font-size: 1.1rem;
                font-weight: 600;
                background-color: $secondary-color;
                border: none;

                &:hover {
                    background-color: $heavy-dark;
                    border: none;
                }
            }
        }
    }

    .featured-heading {
        margin-top: 4rem;
        color: $heavy-dark;
    }

    .text-input {
        width: 400px;
    }

    .form-btn {
        width: 200px;
    }

    .featured-book-container {
        background: $background-radiant;
        height: 500px;
        width: 100%;
        color: $white;

        img {
            height: 500px;
            margin: 4rem 0 4rem 4rem;
            box-shadow: $primary-shadow
        }

        .book-container-texts {
            .book-container-heading {
                font-weight: 600;
                margin-top: 10%;
            }

            .book-rating {
                margin-bottom: 0;

                .rating-stars {
                    color: $secondary-color;
                    margin: 1rem 0 1rem 0;
                }
            }

            .book-description {
                margin: 0 4rem 0 0;
                text-align: justify;
            }

            .featured-book-btn {
                width: 200px;
                padding: 0.8rem;
                border-radius: 5rem;
                font-size: 1.1rem;
                font-weight: 600;
                color: $secondary-color;
                background-color: $white;
                border: none;
                margin-top: 1rem;
                box-shadow: $btn-shadow;
            }
        }
    }
}

